erDiagram
    SharedGame ||--o{ GameFaq : "has faqs"
    SharedGame ||--o{ GameErrata : "has errata"
    SharedGame ||--o{ QuickQuestion : "has questions"
    SharedGame ||--o{ SharedGameDocument : "has documents"
    SharedGame ||--o{ GameCategory_SharedGame : "has categories"
    SharedGame ||--o{ GameMechanic_SharedGame : "has mechanics"
    GameCategory ||--o{ GameCategory_SharedGame : "referenced by"
    GameMechanic ||--o{ GameMechanic_SharedGame : "referenced by"
    User ||--o{ SharedGame : "creates"
    User ||--o{ ShareRequest : "submits"
    User ||--o{ DeleteRequest : "requests"
    User ||--o{ Badge : "earns"
    ShareRequest }o--|| SharedGame : "proposes"
    DeleteRequest }o--|| SharedGame : "targets"

    SharedGame {
        Guid Id PK
        string Title
        string Description
        int MinPlayers
        int MaxPlayers
        int PlayingTimeMinutes
        string Publisher
        int YearPublished
        int BggId UK
        string ImageUrl
        PublicationStatus Status
        Guid CreatedBy FK
        DateTime CreatedAt
        DateTime PublishedAt
        Guid ApprovedBy FK
        bool IsDeleted
        DateTime DeletedAt
        string DeletedBy
    }

    GameFaq {
        Guid Id PK
        Guid GameId FK
        string Question
        string Answer
        int SortOrder
        int Upvotes
        DateTime CreatedAt
    }

    GameErrata {
        Guid Id PK
        Guid GameId FK
        string Title
        string Description
        string AffectedEdition
        string OfficialSource
        DateTime CreatedAt
    }

    QuickQuestion {
        Guid Id PK
        Guid GameId FK
        string Emoji
        string Category
        string Question
        string Answer
        int SortOrder
        DateTime CreatedAt
    }

    ShareRequest {
        Guid Id PK
        Guid UserId FK
        Guid PrivateGameId FK
        ShareRequestStatus Status
        string GameTitle
        string Description
        string DocumentIdsJson
        DateTime CreatedAt
        DateTime SubmittedAt
        Guid ReviewedBy FK
        DateTime ReviewedAt
        string ReviewNotes
        bool IsReviewLocked
        Guid LockedBy FK
        DateTime LockExpires
    }

    DeleteRequest {
        Guid Id PK
        Guid SharedGameId FK
        Guid RequestedBy FK
        string Reason
        DeleteRequestStatus Status
        DateTime RequestedAt
        Guid ReviewedBy FK
        DateTime ReviewedAt
        string ReviewNotes
    }

    Badge {
        Guid Id PK
        string Name
        string Description
        string IconUrl
        BadgeType Type
        int RequiredCount
        bool IsHidden
    }

    User {
        Guid Id PK
        string Email
        string DisplayName
    }

    GameCategory {
        Guid Id PK
        string Name
    }

    GameMechanic {
        Guid Id PK
        string Name
    }

    SharedGameDocument {
        Guid Id PK
        Guid SharedGameId FK
        Guid PdfDocumentId FK
        string DocumentType
        int Version
        bool IsActive
    }

    GameCategory_SharedGame {
        Guid SharedGameId FK
        Guid CategoryId FK
    }

    GameMechanic_SharedGame {
        Guid SharedGameId FK
        Guid MechanicId FK
    }
